Resolves: fdo#43049 basic PPD custom options support

because this is another way seen in the wild to transmit a fax number through
cups as an alternative to using fax4CUPS

Change-Id: I32db38aa05213e469442136eb46d0028098a8b7e